[package]
name = "agwsc"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "*",  features = [
    "Win32_System_Com",
    "Win32_System_SecurityCenter",
]}
tinyjson = "*"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1