[package]
name = "agwsc"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58",  features = [
    "Win32_System_Com",
    "Win32_System_SecurityCenter",
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.5", features = ["serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1